# KafkaPulse

./: README.md  pyproject.toml
kafka/: docker-compose.yml
kafkapulse/src/: kafka_pulse.py  kafkaconsumertest.py  kafkatest.py
kafkapulse/test/: test_kafka_pulse.py  test_plot_pulse.py
src/: kafka_pulse.py  plot_pulse.py
test/: test_kafka_pulse.py
trino/: docker-compose.yml
trino/etc/catalog/: kafka.properties
